--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>.link_to_grails_plugins</name>
 			<type>2</type>
-			<location>/Users/shansrinivasan/Documents/workspace-ggts-3.5.0.RELEASE/TrollChat/target/work/plugins</location>
+			<location>/Users/masterblaster/Atl_startup_weekend/trollchat/target/work/plugins</location>
 		</link>
 	</linkedResources>
 </projectDescription>
